# griffin

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
